@@ -1,3 +1,8 @@
+2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm (inventory_unlocked): Can returen all
+	  slot (even those not in use-slot)
+	* perl/Amanda/Recovery/Scan.pm (find_volume): Use only allowed slot
+
 2015-10-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* man/xml-source/amanda-devices.7.xml: Add STANDARD_IA storage_class
 
